# beakr-cli

./: LICENSE  README.md  install.sh  pyproject.toml
.claude/commands/: kb-audit.md  kb-research.md  kb-search.md  kb-write.md
.claude/skills/beakr/: SKILL.md
.claude/skills/beakr/examples/: answer-org-question.md  research-topic.md  write-decision-page.md
.claude/skills/beakr/reference/: auditing.md  provenance.md  research-workflow.md  writing-pages.md
src/beakr_cli/: __init__.py  citations.py  client.py  config.py  main.py  mcp_server.py  output.py
src/beakr_cli/commands/: auth.py  install.py  kb.py  workspace.py
tests/: test_citations.py  test_mcp_resolver.py
