[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beakr-cli"
version = "0.2.1"
description = "CLI and MCP server for Beakr's knowledge base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Beakr", email = "hello@thebeakr.com" }]
keywords = ["beakr", "wiki", "knowledge-graph", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.15",
    "httpx>=0.27",
    "rich>=13",
    "mcp>=1.0",
    "pydantic>=2",
    "keyring>=25",
]

[project.urls]
Homepage = "https://thebeakr.com"
Repository = "https://github.com/BeakrHub/beakr-cli"
Issues = "https://github.com/BeakrHub/beakr-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
beakr = "beakr_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/beakr_cli"]

[tool.hatch.build.targets.wheel.force-include]
".claude/skills/beakr" = "beakr_cli/assets/skills/beakr"
".claude/commands" = "beakr_cli/assets/commands"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
